# mcp_project

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
mcp_advanced_lab/: mcp_http_client_app.py  mcp_http_client_base.py  mcp_http_host_app.py  mcp_http_server.py
mcp_advanced_lab/workspace/: README.md  test.txt
mcp_studio/: .gitignore  __init__.py
mcp_studio/backend/: app.py  config.py
mcp_studio/backend/api/: __init__.py  chat.py  deps.py  health.py  prompts.py  resources.py  tools.py  workspace.py
mcp_studio/backend/mcp/: __init__.py  runtime.py  server.py  tools.py
mcp_studio/backend/services/: __init__.py  llm.py  tool_router.py
mcp_studio/backend/workspace/: README.md  notes.md  test.txt
mcp_studio/backend/workspace/examples/: calc.py
mcp_studio/frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
mcp_studio/frontend/app/: globals.css  layout.tsx  page.tsx
mcp_studio/frontend/app/chat/: page.tsx
mcp_studio/frontend/app/files/: page.tsx
mcp_studio/frontend/app/prompts/: page.tsx
mcp_studio/frontend/app/resources/: page.tsx
mcp_studio/frontend/app/tools/: page.tsx
mcp_studio/frontend/components/files/: code-view.tsx
mcp_studio/frontend/components/providers/: overview-provider.tsx  toast-provider.tsx
mcp_studio/frontend/components/shell/: app-shell.tsx  sidebar.tsx  topbar.tsx
mcp_studio/frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  sheet.tsx  tabs.tsx
mcp_studio/frontend/lib/: api.ts  types.ts  utils.ts
