[project]
name = "mcp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==2.12.5",
    "gradio==5.49.1",
    "httpx==0.28.1",
    "mcp==1.16.0",
    "openai==2.6.1",
    "torch>=2.12.0",
    "transformers>=5.10.1",
    "uvicorn==0.38.0",
]
