[project]
name = "mcp-studio"
version = "0.1.0"
description = "MCP Studio - a unified Model Context Protocol server and web UI over HTTP, deployable to Hugging Face Spaces."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp==2.12.5",
    "httpx==0.28.1",
    "mcp==1.16.0",
    "python-multipart>=0.0.9",
    "torch>=2.12.0",
    "transformers>=5.10.1",
    "uvicorn==0.38.0",
]

[project.scripts]
mcp-studio = "main:main"
